feat: solar angle endpoint
